--- a/BinaryStudio.ClientManager.WebUi/Content/styles/month.less
+++ b/BinaryStudio.ClientManager.WebUi/Content/styles/month.less
@@ -4,8 +4,8 @@
 
 #month {
     .day {
-        width: 10%;
-        min-width: 10%;
+        width: 20%;
+        min-width: 20%;
         float: left;
         padding: 0;
         margin: 0;
@@ -15,7 +15,6 @@
             margin: 0;
             padding: 0;
             list-style: none;
-            height: 150px;
         }
         
         
